# neuflow

./: .gitignore  CMakeLists.txt  Compiler.lua  Core.lua  CoreUser.lua  Interface.lua  Linker.lua  Log.lua  Memory.lua  NeuFlow.lua  Profiler.lua  README.md  README.txt  Serial.lua  index.html  init.lua  neuflow-1.0-0.rockspec  neuflow-1.0-1.rockspec  neuflow-1.scm-0.rockspec  rom.lua  tools.lua
demos/: face-detector-parallel.lua  face-detector.lua  filter-bank.lua  loopback.lua  loopback_camera.lua
demos/face-detector/: blobParser.lua  face.net
etherflow/: CMakeLists.txt  FindDNET.cmake  FindPCAP.cmake  etherflow.c  etherflow.h  example.c  init.c  init.lua
etherflow/generic/: etherflow.c  tbsp_protocol.c
etherflow/test/: receive.lua  send.lua
ethertbsp/: CMakeLists.txt  ethertbsp.c  ethertbsp.h  example.c  init.c  init.lua
ethertbsp/generic/: ethertbsp.c
ethertbsp/test/: receive.lua  send.lua
scripts/: get-latest-neuflow-image  load-bitfile
segments/: coef_Abs  coef_Sqrt  coef_Sqrt_th  coef_Sqrt_th_div_3  coef_Sqrt_th_div_32  coef_StdSigm  coef_StdSigmAbs  coef_StdSigm_abs_err  coef_StdSigm_abs_err_all_range  coef_Tanh  coef_TanhAbs
src/: CMakeLists.txt  Camera.lua  Compiler.lua  Core.lua  CoreUser.lua  DmaInterface.lua  Interface.lua  Linker.lua  LinkerExtensions.lua  Memory.lua  NeuFlow.lua  Serial.lua  defines.lua  defines_ibm_asic.lua  defines_pico_m503.lua  defines_xilinx_ml605.lua  defines_xilinx_ml605_tbsp.lua  init.lua  rom.lua  tools.lua
